# 2d-render-second

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.cloud  Dockerfile.trt8.cloud  RELEASE.md  pyproject.toml  run.sh  simple_webrtc_server.py
2d-render/: config.py  logging_config.py  pyproject.toml  server.py
2d-render/agnet/: environment.yaml  stream_pipeline_offline.py  stream_pipeline_online.py
2d-render/agnet/core/atomic_components/: avatar_registrar.py  cfg.py  condition_handler.py  loader.py  motion_stitch.py  source2info.py  video_frame_extractor.py
2d-render/agnet/core/aux_models/: blaze_face.py  face_mesh.py  mediapipe_landmark478.py
2d-render/agnet/core/utils/: crop.py
2d-render/agnet/core/utils/blend/: __init__.py
2d-render/agnet/scripts/: cvt_onnx_to_trt.py
2d-render/agnet/scripts/libgrid_sample_3d_plugin/5080/: Dockerfile  README.md
2d-render/ditto/: stream_pipeline_offline.py  stream_pipeline_online.py
2d-render/ditto/core/atomic_components/: audio2motion.py  avatar_registrar.py  cfg.py
2d-render/ditto/core/utils/blend/: __init__.py  build_local.bat  build_local.sh  setup.py
2d-render/proto/: meta_pb2.py  meta_pb2_grpc.py  render_service_pb2.py  render_service_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py
2d-render/service/: alpha.py  object_models.py  offline_alpha.py  render.py  render_request_runtime.py  streaming.py  test.py
2d-render/service/progress/: __init__.py  timing.py  tracker.py
2d-render/todo/: add_cancel.md  allocate_per_service.md  complete_offline.md  fix_alpha.md  fix_chunk_resize.md  optimize_caches.md  optimize_librosa_delay.md  width_height_swap.md
2d-render/todo/done/: add_timings_logs.md  cuda_stale_context_investigation.md  fix_size_metadata_avatar_id.md  support_progress.md
2d-render/tools/client/: client.py  render_service_pb2.py  render_service_pb2_grpc.py
rtc_mediaserver/: README.md  __init__.py  config.py  events.py  logging_config.py
(+38 files in other folders)
